figures, pdb verbatim

--- a/mapping.tex
+++ b/mapping.tex
@@ -1,5 +1,9 @@
 \chapter{Mapping}
 
-\begin{verbatim}
-\input{fig/chemical_structure/dcv2t.pdb}   
-\end{verbatim}
+\begin{figure}[ht]
+\includegraphics[width=0.5\linewidth]{./fig/chemical_structure/dcv2t_atom_types}
+\caption{Atom types of DCV2T}
+\label{fig:dcv2t_at}
+\end{figure}
+
+\VerbatimInput[baselinestretch=1,fontsize=\footnotesize,numbers=left]{./fig/chemical_structure/dcv2t.pdb}
