--- a/manual.tex
+++ b/manual.tex
@@ -14,6 +14,7 @@
 %\usepackage{draftcopy}
 \usepackage{longtable}
 \usepackage{paralist}
+\usepackage{fancyvrb}
 
 \usepackage
 [dvips, %or dvips or pdftex
