first version of calculator extraction

--- a/manual.tex
+++ b/manual.tex
@@ -53,7 +53,7 @@ pdfpagemode=UseNone]{hyperref}
 \include{morphology}
 \include{mapping}
 \include{transfer_integrals}
-%\include{reference}
+\include{reference}
 
 \bibliographystyle{unsrt}
 %\bibliography{votca}
