ctp_map section clean-up

--- a/dft.tex
+++ b/dft.tex
@@ -1,4 +1,6 @@
 \section{Density-functional}
+\label{sec:dft}
+
 \begin{itemize}
 \item {\it not sure about directory structure yet, using {\tt
       \$DIRECTORY} for the time being}
