--- a/moo.tex
+++ b/moo.tex
@@ -1,4 +1,5 @@
 \section{Semi-empirical determination of transfer intergals}
+\label{sec:moo}
 
 {\color{red} Old text from Thorsten. Cleaning is needeed.}
 
