--- a/morphology.tex
+++ b/morphology.tex
@@ -1,4 +1,6 @@
 \chapter{System morphology}
+\label{sec:morphology}
+
 In this section we describe how to specify the morphology of the system. We will use DCV2T as an example.
 
 \section{Single molecule}
@@ -6,7 +8,7 @@ In this section we describe how to specify the morphology of the system. We will
 \begin{wrapfigure}{ht}{0.5\linewidth}
 \centering
 \includegraphics[width=0.9\linewidth]{./fig/chemical_structure/dcv2t_atom_types}
-\caption{\small Atom types of DCV2T. The molecule has two types of building blocks (residues), thiophene (THI) and dicyanovinyl (NIT). }
+\caption{\small Atom types of DCV2T. The molecule consists of two building blocks (residues): thiophene (THI) and dicyanovinyl (NIT). }
 \label{fig:dcv2t_at}
 \end{wrapfigure}
 
