--- a/newcommands.tex
+++ b/newcommands.tex
@@ -3,3 +3,12 @@
 \newcommand{\fig}[1]{figure~\ref{fig:#1}}
 \newcommand{\Fig}[1]{Figure~\ref{fig:#1}}
 
+\newcommand{\xml}{XML\xspace}
+\newcommand{\gromacs}{GROMACS\xspace}
+\newcommand{\gaussian}{GAUSSIAN\xspace}
+\newcommand{\turbomole}{TURBOMOLE\xspace}
+\newcommand{\tinker}{TINKER\xspace}
+
+\newcommand{\Alq}{$\mathrm{Alq}_3$\xspace}
+\newcommand{\dcvt}{DCV2T\xspace}
+
