--- a/moo.tex
+++ b/moo.tex
@@ -1,6 +1,10 @@
 \section{Semi-empirical determination of transfer intergals}
 \label{sec:moo}
 
+Molecular orbital overal module (MOO) is useful for fast evaluation of electronic coupling elements. It is based on the semi-empirical ZINDO Hamiltonian and therefore has limited applicability. The general advice is to first compare the accuracy of this method to the DFT-based calculations.  
+
+Even though MOO is self-sufficent, it relies on the knowledge of the molecular orbitals of 
+
 {\color{red} Old text from Thorsten. Cleaning is needeed.}
 
 Two types of input files are necessary for each charge unit: a geometry specification (which we refer to as INPUT\_COORDS) and a molecular orbital file (which we refer to as fort.7).
