reference xml parser

--- a/reference.tex
+++ b/reference.tex
@@ -1,3 +1,6 @@
 \chapter*{Reference}
 \section*{Calculators}
 \input{ref_calculators}
+\section*{Conjugated segment definitions}
+\input{reference/xml/ctp_listcharges.xml}
+
